# llm_chat

./: .gitignore  pyproject.toml  readme.md
client/: README.md  index.html  package.json  sample.env
client/src/: App.jsx  constants.js  index.css
client/src/components/: footer.jsx  loader.jsx  messages.jsx  modal.jsx  sidebar.jsx  welcome.jsx
client/src/hooks/: useConnection.jsx  useDB.jsx
client/src/store/: index.js
server/: .gitignore  config.py  connection.py  constants.py  db_manager.py  llm.py  main.py  pyproject.toml  readme.md  requirements.txt  sample.env
